# thrift_rust_async

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  benchmark_result.md  readme.md  tutorial.thrift
async_thrift/: Cargo.toml
async_thrift/src/: errors.rs
async_thrift/src/protocol/: async_binary.rs  mod.rs
async_thrift/src/server/: asynced.rs  mod.rs  server_main.rs
async_thrift/src/transport/: async_buffered.rs  async_framed.rs  async_socket.rs  mod.rs
async_thrift/test/: Makefile  Makefile.in
async_thrift_tokio/: Cargo.toml
async_thrift_tokio/src/: lib.rs
async_thrift_tokio/src/protocol/: async_binary.rs  mod.rs
async_thrift_tokio/src/server/: asynced.rs  mod.rs
async_thrift_tokio/src/transport/: async_buffered.rs  async_socket.rs  mod.rs
async_thrift_uring/: Cargo.toml
async_thrift_uring/src/: autogen.rs
async_thrift_uring/src/protocol/: async_binary.rs  mod.rs
async_thrift_uring/src/server/: asynced.rs  mod.rs
async_thrift_uring/src/transport/: async_buffered.rs  async_framed.rs  async_socket.rs  mod.rs
benchmark/: Cargo.toml  README.md  benchmark.sh  benchmark_all.sh
benchmark/src/: client.rs  main.rs  tutorial.rs  util.rs
benchmark/src/async_thrift_test/: bytes.thrift  client.rs  echo.rs  mod.rs  server.rs  tutorial.rs  with_list_map.rs  with_struct.rs
benchmark/src/async_thrift_test_tokio/: client.rs  mod.rs  server.rs  testthrift.rs  tutorial.rs  with_list_map.rs
benchmark/src/original_thrift_test/: client.rs  mod.rs  server.rs  tutorial.rs
benchmark/src/sync_thrift_test/: client.rs  mod.rs  server.rs  tutorial.rs  with_struct.rs
go_client/: .gitignore  README.md  run.sh
go_client/src/: client.go  handler.go  main.go  tutorial.thrift
go_client/src/tutorial/: GoUnusedProtection__.go  tutorial-consts.go  tutorial.go
src/: autogen.rs  client.rs  errors.rs  lib.rs  main.rs  thrift_server.rs  tutorial.rs
src/protocol/: async_binary.rs  binary.rs  mod.rs  stored.rs
src/server/: asynced.rs  mod.rs  multiplexed.rs  server_main.rs  threaded.rs
src/transport/: async_buffered.rs  async_framed.rs  async_socket.rs  buffered.rs  framed.rs  mem.rs  mod.rs  socket.rs
test/: Cargo.toml
(+3 files in other folders)
