[package]
name = "thrift"
description = "Rust bindings for the Apache Thrift RPC system"
version = "0.14.0"
license = "Apache-2.0"
authors = ["Apache Thrift Developers <dev@thrift.apache.org>"]
homepage = "http://thrift.apache.org"
documentation = "https://thrift.apache.org"
readme = "README.md"
exclude = ["Makefile*", "test/**", "*.iml"]
keywords = ["thrift"]
edition = "2018"

[dependencies]
async-trait = "0.1.38"
async-std = "1"
futures = "0.3.0"
threadpool = "1.7"
ordered-float = "1.0"
byteorder = "1.3"

