[package]
name = "async_thrift_uring"
description = "Rust bindings for the Apache Thrift RPC system"
version = "0.14.0"
license = "Apache-2.0"
authors = ["Apache Thrift Developers <dev@thrift.apache.org>"]
homepage = "http://thrift.apache.org"
documentation = "https://thrift.apache.org"
readme = "README.md"
exclude = ["Makefile*", "test/**", "*.iml"]
keywords = ["thrift"]
edition = "2018"

[dependencies]
ordered-float = "1.0"
byteorder = "1.3"
integer-encoding = ">=1.1.4" # https://issues.apache.org/jira/browse/THRIFT-5131
log = "0.4"
threadpool = "1.7"
futures = "0.3.5"
async-std = { version = "1.6.3", features = ["tokio02"] }
async-trait = "0.1.40"
try_from = "0.2.0"
ringbahn = { git = "https://github.com/withoutboats/ringbahn.git" }