[package]
name = "benchmark"
version = "0.1.0"
authors = ["151250176 <151250176@smail.nju.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_thrift = { path = "../async_thrift" }
async_thrift_tokio = { path = "../async_thrift_tokio" }
ordered-float = "1.0"
byteorder = "1.3"
integer-encoding = ">=1.1.4" # https://issues.apache.org/jira/browse/THRIFT-5131
log = "0.4"
threadpool = "1.7"
futures = "0.3.5"
async-std = {version = "1.6.3", features = ["unstable"]}
async-trait = "0.1.40"
try_from = "0.2.0"
time = "0.2.17"
thrift = "0.13.0"
tokio = { version = "0.2.22", features = ["full"]}
#pprof = { version = "0.3.18", features = ["flamegraph"]}
#jemallocator = "0.3.2"